--- a/fx-bom/pom.xml
+++ b/fx-bom/pom.xml
@@ -23,6 +23,7 @@
         <guava.version>19.0</guava.version>
         <curator.version>4.2.0</curator.version>
         <zookeeper.version>3.4.14</zookeeper.version>
+        <caffeine.version>2.9.3</caffeine.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -111,6 +112,11 @@
                         <artifactId>netty</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>${caffeine.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
