--- a/test/pom.xml
+++ b/test/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>fx-netty</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.29.2-GA</version>
+        </dependency>
     </dependencies>
 
 </project>
